Style changes and new resume

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                             </div>
                         </div>
                         <div class="column is-two-thirds">
-                            <div id="profileText">
+                            <div id="profileText" class="has-text-centered-mobile">
                                 <h1 class="title is-3" data-aos="fade-right" data-aos-delay="500"
                                     data-aos-duration="800">
                                     Hi, I'm Eric.
                                 </h1>
                                 <h2 class="subtitle is-5" data-aos="fade-right" data-aos-duration="1000"
                                     data-aos-delay="500">
-                                    I'm a software developer currently based out of Montreal.
+                                    I'm a software engineer currently based in California.
                                 </h2>
                             </div>
                         </div>
@@ -113,8 +113,7 @@
                         <div class="column is-5">
                             <div class="box">
                                 <p>
-                                    In October 2020, I will be moving to Mountain View, California to work
-                                    as a software engineer for Google!
+                                  I currently work as a software engineer for Google.
                                 </p>
                             </div>
                         </div>
