--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                         <div class="column is-5">
                             <div class="box">
                                 <p>
-                                    I'm a McGill Computer Science student (class of '20) with a minor in
-                                    Economics. I've mainly specialized in AI and machine learning classes.
+                                    I studied at McGill University (class of '20), with a major in Computer Science and a minor in
+                                    Economics.
                                 </p>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                         <div class="column is-5">
                             <div class="box">
                                 <p>
-                                    I studied music in CEGEP at Marianopolis College. 
+                                    In CEGEP, I studied music at Marianopolis College. 
                                     While at Marianopolis, I played
                                     in numerous McGill ensembles and orchestras; feel free to take a look at my
                                     <a href="#performances">performances</a>!
