Hover animations and new image

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <div class="columns is-vcentered">
                 <div class="column is-6 is-offset-1">
                     <div class="columns is-vcentered">
-                        <div class="column is-one-third">
+                        <div class="column is-6">
                             <div class="has-text-centered">
                                 <img src="/assets/images/eric_profile.jpg" alt="Profile" id="profileImage"
                                      data-aos="zoom-in" data-aos-delay="500" data-aos-duration="800">
                             </div>
                         </div>
-                        <div class="column is-two-thirds">
+                        <div class="column is-6">
                             <div id="profileText" class="has-text-centered-mobile">
                                 <h1 class="title is-3" data-aos="fade-right" data-aos-delay="500"
                                     data-aos-duration="800">
@@ -111,11 +111,13 @@
                     </h1>
                     <div class="columns is-vcentered" data-aos="fade-left">
                         <div class="column is-5">
-                            <div class="box">
-                                <p>
-                                  I currently work as a software engineer for Google.
-                                </p>
-                            </div>
+                            <a href="https://google.com" target="_blank">
+                                <div class="box">
+                                    <p>
+                                      I currently work as a software engineer for Google.
+                                    </p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-2 has-text-centered is-hidden-mobile">
                             <i class="fab fa-google fa-4x" style="color: #dc4e76;"></i>
@@ -126,24 +128,28 @@
                             <i class="fas fa-university fa-4x" style="color: #35375a;"></i>
                         </div>
                         <div class="column is-5">
-                            <div class="box">
-                                <p>
-                                    I studied at McGill University (class of '20), with a major in Computer Science and a minor in
-                                    Economics.
-                                </p>
-                            </div>
+                            <a href="https://www.mcgill.ca" target="_blank">
+                                <div class="box">
+                                    <p>
+                                        I studied at McGill University (class of '20), with a major in Computer Science and a minor in
+                                        Economics.
+                                    </p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="columns is-vcentered" data-aos="fade-left">
                         <div class="column is-5">
-                            <div class="box">
-                                <p>
-                                    In CEGEP, I studied music at Marianopolis College. 
-                                    While at Marianopolis, I played
-                                    in numerous McGill ensembles and orchestras; feel free to take a look at my
-                                    <a href="#performances">performances</a>!
-                                </p>
-                            </div>
+                            <a href="#performances">
+                                <div class="box">
+                                    <p>
+                                        In CEGEP, I studied music at Marianopolis College. 
+                                        While at Marianopolis, I played
+                                        in numerous McGill ensembles and orchestras; feel free to take a look at my
+                                        performances!
+                                    </p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-2 has-text-centered is-hidden-mobile">
                             <i class="fas fa-guitar fa-4x" style="color: #cc49b3;"></i>
@@ -167,59 +173,61 @@
                     </p>
                     <div class="columns is-multiline is-vcentered" data-aos="fade-left" style="margin-top: 1em;">
                         <div class="column is-4">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="/circles.js" target="_blank">Circles.js</a>
-                                </h5>
-                                <p>A small browser based game where you try to grow your circle</p>
-                                <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
-                            </div>
+                            <a href="/circles.js" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                        Circles.js
+                                    </h5>
+                                    <p>A small browser based game where you try to grow your circle</p>
+                                    <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-4">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://ddmal.music.mcgill.ca/diva.js/try/single.html" target="_blank">
+                            <a href="https://ddmal.music.mcgill.ca/diva.js/try/single.html" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
                                         Diva.js
-                                    </a>
-                                </h5>
-                                <p>
-                                    A web-based high-resolution document viewer optimized for speed through AJAX calls
-                                </p>
-                                <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
-                            </div>
+                                    </h5>
+                                    <p>
+                                        A web-based high-resolution document viewer optimized for speed through AJAX calls
+                                    </p>
+                                    <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-4">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://ddmal.music.mcgill.ca/IIIF-AV-player/" target="_blank">
-                                        IIIF v3.0 AV Player
-                                    </a>
-                                </h5>
-                                <p>A IIIF v3.0 compatible A/V media player, synced with a rendered score</p>
-                                <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
-                            </div>
+                            <a href="https://ddmal.music.mcgill.ca/IIIF-AV-player/" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            IIIF v3.0 AV Player
+                                    </h5>
+                                    <p>A IIIF v3.0 compatible A/V media player, synced with a rendered score</p>
+                                    <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-4">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://github.com/EricHanLiu/quotes" target="_blank">
-                                        Quotes
-                                    </a>
-                                </h5>
-                                <p>A script to display inspirational Twitter quotes on your monitor</p>
-                                <div class="tag is-rounded is-link" style="margin-top: 1em;">Python</div>
-                            </div>
+                            <a href="https://github.com/EricHanLiu/quotes" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            Quotes
+                                    </h5>
+                                    <p>A script to display inspirational Twitter quotes on your monitor</p>
+                                    <div class="tag is-rounded is-link" style="margin-top: 1em;">Python</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-4">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://whatsmydrink.github.io" target="_blank">
-                                        What's My Drink
-                                    </a>
-                                </h5>
-                                <p>A site to share your favorite drink and its recipe</p>
-                                <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
-                            </div>
+                            <a href="https://whatsmydrink.github.io" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            What's My Drink
+                                    </h5>
+                                    <p>A site to share your favorite drink and its recipe</p>
+                                    <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-4 has-text-centered" style="margin-top: 1em;">
                             <a href="https://github.com/EricHanLiu" target="_blank">
@@ -251,48 +259,48 @@
                         professional performances. Here are a few of my favorites!</p>
                     <div class="columns is-multiline" data-aos="fade-left" style="margin-top: 1em;">
                         <div class="column is-6">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://youtu.be/yMt6shkXLAA" target="_blank">
-                                        Iturralde - Pequeña Czarda
-                                    </a>
-                                </h5>
-                                <p>McGill Winter 2017 saxophone class final recital</p>
-                            </div>
+                            <a href="https://youtu.be/yMt6shkXLAA" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            Iturralde - Pequeña Czarda
+                                    </h5>
+                                    <p>McGill Winter 2017 saxophone class final recital</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-6">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://www.youtube.com/watch?v=EQT3tDs1NY4&feature=youtu.be"
-                                       target="_blank">
-                                        Bonneau - Caprice
-                                    </a>
-                                </h5>
-                                <p>2016 Prix d'Expression competition, first place</p>
-                            </div>
+                            <a href="https://www.youtube.com/watch?v=EQT3tDs1NY4&feature=youtu.be"
+                                   target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            Bonneau - Caprice
+                                    </h5>
+                                    <p>2016 Prix d'Expression competition, first place</p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-6">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://youtu.be/_IUcGjPsktI"
-                                       target="_blank">
-                                        Glazunov - Concerto
-                                    </a>
-                                </h5>
-                                <p>
-                                    McGill Fall 2016 saxophone class final recital
-                                </p>
-                            </div>
+                            <a href="https://youtu.be/_IUcGjPsktI"
+                                   target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            Glazunov - Concerto
+                                    </h5>
+                                    <p>
+                                        McGill Fall 2016 saxophone class final recital
+                                    </p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-6">
-                            <div class="box">
-                                <h5 class="title is-5">
-                                    <a href="https://www.youtube.com/watch?v=2JDIJ5YytDQ" target="_blank">
-                                        Bozza - Aria
-                                    </a>
-                                </h5>
-                                <p>McGill Conservatory 2014 Gala concert</p>
-                            </div>
+                            <a href="https://www.youtube.com/watch?v=2JDIJ5YytDQ" target="_blank">
+                                <div class="box">
+                                    <h5 class="title is-5">
+                                            Bozza - Aria
+                                    </h5>
+                                    <p>McGill Conservatory 2014 Gala concert</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
