Updated skills section of resume

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </h1>
                     <div class="columns is-vcentered" data-aos="fade-left">
                         <div class="column is-5">
-                            <a href="https://google.com" target="_blank">
+                            <a href="/assets/cv" target="_blank">
                                 <div class="box">
                                     <p>
                                       I currently work as a software engineer for Google.
