Color performances text

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         In CEGEP, I studied music at Marianopolis College. 
                                         While at Marianopolis, I played
                                         in numerous McGill ensembles and orchestras; feel free to take a look at my
-                                        performances!
+                                        <span style="color: #cc49b3;">performances</span>!
                                     </p>
                                 </div>
                             </a>
