--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                     <a class="navbar-item" href="/">
                         <img src="/assets/images/logo.png">
                     </a>
+                    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                        <span aria-hidden="true"></span>
+                    </a>
                 </div>
                 <div class="navbar-menu">
                     <div class="navbar-end">
