--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
                     </h1>
                     <div class="columns is-vcentered" data-aos="fade-left">
                         <div class="column is-5">
-                            <div class="box">
-                                <p>
-                                  I currently work as a software engineer for Google.
-                                </p>
-                            </div>
+                            <a href="assets/cv/index.html" target="_blank">
+                                <div class="box">
+                                    <p>
+                                      I currently work as a software engineer for Google.
+                                    </p>
+                                </div>
+                            </a>
                         </div>
                         <div class="column is-2 has-text-centered is-hidden-mobile">
                             <i class="fab fa-google fa-4x" style="color: #dc4e76;"></i>
@@ -132,10 +134,12 @@
                         </div>
                         <div class="column is-5">
                             <div class="box">
-                                <p>
-                                    I studied at McGill University (class of '20), with a major in Computer Science and a minor in
-                                    Economics.
-                                </p>
+                                <a href="https://www.mcgill.ca/" target="_blank">
+                                    <p>
+                                        I studied at McGill University (class of '20), with a major in Computer Science and a minor in
+                                        Economics.
+                                    </p>
+                                </a>
                             </div>
                         </div>
                     </div>
