--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
             </div>
         </div>
     </div>
-    <div class="hero-foot is-hidden-mobile">
+    <div class="hero-foot">
         <nav class="tabs is-centered">
             <div class="container">
                 <ul>
                     <li class="tab"><a href="#aboutMe">
                         <div class="icon is-small"><i class="fas fa-info-circle" style="color: #35375a;"></i></div>
-                        <strong>About Me</strong>
+                        <strong class="is-hidden-mobile">About Me</strong>
                     </a></li>
                     <li class="tab"><a href="#projects">
                         <div class="icon is-small"><i class="fas fa-layer-group" style="color: #35375a;"></i></div>
-                        <strong>Projects</strong>
+                        <strong class="is-hidden-mobile">Projects</strong>
                     </a></li>
                     <li class="tab"><a href="#performances">
                         <div class="icon is-small"><i class="fas fa-guitar" style="color: #35375a;"></i></div>
-                        <strong>Performances</strong>
+                        <strong class="is-hidden-mobile">Performances</strong>
                     </a></li>
                 </ul>
             </div>
