--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             </a>
                         </div>
                         <div class="column is-4">
-                            <a href="https://whatsmydrink.github.io" target="_blank">
+                            <a href="/whatsmydrink" target="_blank">
                                 <div class="box">
                                     <h5 class="title is-5">
                                             What's My Drink
