--- a/assets/cv/index.html
+++ b/assets/cv/index.html
@@ -11,10 +11,6 @@
     </style>
 </head>
 <body>
-<object data="EricLiuResume.pdf" type="application/pdf" width="100%" height="100%">
-    <p>
-        <a href="myfile.pdf"> PDF File </a>
-    </p>
-</object>
+<embed src="EricLiuResume.pdf" width="100%" height="100%"/>
 </body>
 </html>
