--- a/assets/cv/index.html
+++ b/assets/cv/index.html
@@ -10,7 +10,6 @@
         }
     </style>
 </head>
-<body>
-<embed src="EricLiuResume.pdf" width="100%" height="100%"/>
+    <iframe src="https://docs.google.com/viewer?url=https://erichanliu.github.io/assets/cv/EricLiuResume.pdf&embedded=true" width="100%" height="100%" style="width: 100%; height: 100%;" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
