--- a/yosameite/index.html
+++ b/yosameite/index.html
@@ -11,10 +11,6 @@
     </style>
 </head>
 <body>
-<object data="yosameite.pdf" type="application/pdf" width="100%" height="100%">
-    <p>
-        <a href="file.pdf"> PDF File </a>
-    </p>
-</object>
+    <iframe src="https://docs.google.com/viewer?url=https://erichanliu.github.io/yosameite/yosameite.pdf&embedded=true" width="100%" height="100%" style="width: 100%; height: 100%;" frameborder="0" scrolling="no"></iframe>
 </body>
 </html>
