Update resume link to use drive instead

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="navbar-menu">
                     <div class="navbar-end">
-                        <a class="navbar-item" href="/assets/cv" target="_blank">
+                        <a class="navbar-item" href="https://drive.google.com/file/d/1gTN-6KF9Gm737gnW6we0MDmOPQ2YEj0a/view" target="_blank">
                             <div class="icon"><i class="far fa-copy" style="color: #35375a;"></i></div>
                             <strong>CV</strong>
                         </a>
