--- a/index.html
+++ b/index.html
@@ -176,14 +176,16 @@
                     <p data-aos="fade-right">
                         I've worked on a number of open source projects, some of which I've showcased below.
                     </p>
-                    <div class="columns is-multiline is-vcentered" data-aos="fade-left" style="margin-top: 1em;">
+                    <div class="columns is-multiline" data-aos="fade-left" style="margin-top: 1em;">
                         <div class="column is-4">
                             <a href="/circles.js" target="_blank">
                                 <div class="box">
-                                    <h5 class="title is-5">
-                                        Circles.js
-                                    </h5>
-                                    <p>A small browser based game where you try to grow your circle</p>
+                                    <div>
+                                        <h5 class="title is-5">
+                                            Circles.js
+                                        </h5>
+                                        <p>A small browser based game where you try to grow your circle</p>
+                                    </div>
                                     <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
                                 </div>
                             </a>
@@ -191,12 +193,14 @@
                         <div class="column is-4">
                             <a href="https://ddmal.music.mcgill.ca/diva.js/try/single.html" target="_blank">
                                 <div class="box">
-                                    <h5 class="title is-5">
-                                        Diva.js
-                                    </h5>
-                                    <p>
-                                        A web-based high-resolution document viewer optimized for speed through AJAX calls
-                                    </p>
+                                    <div>
+                                        <h5 class="title is-5">
+                                            Diva.js
+                                        </h5>
+                                        <p>
+                                            A web-based high-resolution document viewer optimized for speed through AJAX calls
+                                        </p>
+                                    </div>
                                     <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
                                 </div>
                             </a>
@@ -204,10 +208,12 @@
                         <div class="column is-4">
                             <a href="https://ddmal.music.mcgill.ca/IIIF-AV-player/" target="_blank">
                                 <div class="box">
-                                    <h5 class="title is-5">
-                                            IIIF v3.0 AV Player
-                                    </h5>
-                                    <p>A IIIF v3.0 compatible A/V media player, synced with a rendered score</p>
+                                    <div>
+                                        <h5 class="title is-5">
+                                                IIIF AV Player
+                                        </h5>
+                                        <p>A IIIF v3.0 compatible A/V media player, synced with a rendered score</p>
+                                    </div>
                                     <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
                                 </div>
                             </a>
@@ -215,10 +221,12 @@
                         <div class="column is-4">
                             <a href="https://github.com/EricHanLiu/quotes" target="_blank">
                                 <div class="box">
-                                    <h5 class="title is-5">
-                                            Quotes
-                                    </h5>
-                                    <p>A script to display inspirational Twitter quotes on your monitor</p>
+                                    <div>
+                                        <h5 class="title is-5">
+                                                Quotes
+                                        </h5>
+                                        <p>A script to display inspirational Twitter quotes on your monitor</p>
+                                    </div>
                                     <div class="tag is-rounded is-link" style="margin-top: 1em;">Python</div>
                                 </div>
                             </a>
@@ -226,15 +234,17 @@
                         <div class="column is-4">
                             <a href="/whatsmydrink" target="_blank">
                                 <div class="box">
-                                    <h5 class="title is-5">
-                                            What's My Drink
-                                    </h5>
-                                    <p>A site to share your favorite drink and its recipe</p>
+                                    <div>
+                                        <h5 class="title is-5">
+                                                What's My Drink
+                                        </h5>
+                                        <p>A site to share your favorite drink and its recipe</p>
+                                    </div>
                                     <div class="tag is-rounded is-warning" style="margin-top: 1em;">JavaScript</div>
                                 </div>
                             </a>
                         </div>
-                        <div class="column is-4 has-text-centered" style="margin-top: 1em;">
+                        <div class="column is-4 has-text-centered" style="align-self: center; margin-top: 1em;">
                             <a href="https://github.com/EricHanLiu" target="_blank">
                                 <div class="icon"><i class="fab fa-github fa-4x"></i></div>
                                 <p>More of my projects can be found on my GitHub</p>
