--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="navbar-menu">
                     <div class="navbar-end">
-                        <a class="navbar-item" href="https://drive.google.com/file/d/1gTN-6KF9Gm737gnW6we0MDmOPQ2YEj0a/view" target="_blank">
+                        <a class="navbar-item" href="https://drive.google.com/file/d/1ZgaDzYsO9aZdBfda5zDgVrN_Of3et4tc/view?usp=sharing" target="_blank">
                             <div class="icon"><i class="far fa-copy" style="color: #35375a;"></i></div>
                             <strong>CV</strong>
                         </a>
@@ -116,7 +116,7 @@
                     </h1>
                     <div class="columns is-vcentered" data-aos="fade-left">
                         <div class="column is-5">
-                            <a href="assets/cv/index.html" target="_blank">
+                            <a href="https://drive.google.com/file/d/1ZgaDzYsO9aZdBfda5zDgVrN_Of3et4tc/view?usp=sharing" target="_blank">
                                 <div class="box">
                                     <p>
                                       I currently work as a software engineer for Google.
