--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="navbar-menu">
                     <div class="navbar-end">
-                        <a class="navbar-item" href="https://drive.google.com/file/d/1ZgaDzYsO9aZdBfda5zDgVrN_Of3et4tc/view?usp=sharing" target="_blank">
+                        <a class="navbar-item" href="https://docs.google.com/document/d/1QXplSR_QcXU81P7zg7HXhWA5fc6E1rvsYenhxHYcg_0/edit?usp=sharing&resourcekey=0-GNtOjxwK6YkmfkDo-9fPTw" target="_blank">
                             <div class="icon"><i class="far fa-copy" style="color: #35375a;"></i></div>
                             <strong>CV</strong>
                         </a>
