Update location and photo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 </h1>
                                 <h2 class="subtitle is-5" data-aos="fade-right" data-aos-duration="1000"
                                     data-aos-delay="500">
-                                    I'm a software engineer currently based in California.
+                                    I'm a software engineer currently based in New York.
                                 </h2>
                             </div>
                         </div>
